# i19-bluesky

./: .copier-answers.yml  .pre-commit-config.yaml  Dockerfile  README.md  catalog-info.yaml  dev_install.sh  pyproject.toml  renovate.json  switcher.json  uv.lock.orig
.github/: CODEOWNERS  CONTRIBUTING.md
.github/actions/install_requirements/: action.yml
.github/workflows/: _dist.yml  _docs.yml  _release.yml  _system_test.yml  _test.yml  _tox.yml  ci.yml
0.1.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0/.doctrees/: _api.doctree  genindex.doctree  how-to.doctree
0.1.0/_api/: i19_bluesky.html
0.1.0/_sources/tutorials/: getting_started.md.txt
0.1.0/explanations/: decisions.html
0.1.0/explanations/decisions/: 0001-record-architecture-decisions.html  0002-switched-to-python-copier-template.html  0003-repository-structure.html  0004-optics-blueapi-architecture.html
0.1.0/how-to/: contribute.html
0.1.0/tutorials/: getting_started.html
0.1.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.1/.doctrees/: index.doctree
0.1.1/.doctrees/explanations/decisions/: 0003-repository-structure.doctree  0004-optics-blueapi-architecture.doctree
0.1.1/.doctrees/how-to/: contribute.doctree
0.1.1/_api/: i19_bluesky.html
0.1.1/_sources/: reference.md.txt
0.1.1/_sources/_api/: i19_bluesky.rst.txt
0.1.1/explanations/: decisions.html
0.1.1/explanations/decisions/: 0001-record-architecture-decisions.html  0002-switched-to-python-copier-template.html  0003-repository-structure.html  0004-optics-blueapi-architecture.html
0.1.1/how-to/: contribute.html
0.1.1/tutorials/: getting_started.html
docs/: _api.rst  conf.py  developer.md  how-to.md  index.md
docs/developer/: getting_started.md
docs/explanations/decisions/: 0003-optics-blueapi-architecture.md  0003-repository-structure.md  0004-optics-blueapi-architecture.md
docs/how-tos/: getting_started.md
docs/tutorials/: getting_started.md  installation.md
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
main/.doctrees/: _api.doctree  explanations.doctree  genindex.doctree  how-to.doctree  index.doctree  reference.doctree  tutorials.doctree
main/.doctrees/_api/: i19_bluesky.doctree
main/.doctrees/explanations/: decisions.doctree
main/.doctrees/explanations/decisions/: 0001-record-architecture-decisions.doctree  0002-switched-to-python-copier-template.doctree  0003-repository-structure.doctree  0004-optics-blueapi-architecture.doctree
main/.doctrees/how-to/: contribute.doctree
main/.doctrees/tutorials/: getting_started.doctree
main/_api/: i19_bluesky.html
main/_static/: documentation_options.js
main/explanations/: decisions.html
main/explanations/decisions/: 0001-record-architecture-decisions.html  0002-switched-to-python-copier-template.html  0003-repository-structure.html  0004-optics-blueapi-architecture.html
main/how-to/: contribute.html
main/tutorials/: getting_started.html
src/i19_bluesky/: __main__.py  exceptions.py  log.py
src/i19_bluesky/eh1/: __init__.py  eh1_optics_hutch_control.py  find_beam_centre.py  optics_hutch_control.py  pin_tip_detection.py
src/i19_bluesky/eh2/: __init__.py  backlight_plan.py  eh2_optics_hutch_control.py  eiger_plans.py  move_detector_stage.py  pincol_control_plans.py  zebra_arming_plan.py  zebra_collection_setup_plan.py
src/i19_bluesky/optics/: __init__.py  change_energy_plan.py  change_energy_plans.py  check_access_control.py  device_composites.py  experiment_shutter_plans.py  focusing_mirrors_plans.py  fosing_mirrors_plans.py
src/i19_bluesky/panda_config_files/: panda-pc.yaml  panda-through-zebra.yaml
src/i19_bluesky/parameters/: components.py  constants.py  devices_composites.py  serial_parameters.py
src/i19_bluesky/plans/: __init__.py  optics_hutch_control_plans.py
src/i19_bluesky/serial/: __init__.py  diffractometer_plans.py  diffractometer_setup.py  eiger_plans.py  example_trigger_plan_panda.py  example_trigger_plan_zebra.py  example_trigger_plan_zebra_vs_panda.py  panda_serial_collection.py  panda_setup_plans.py  panda_stubs.py  run_serial_with_panda.py  setup_beamline_pre_collection.py  setup_detector.py  setup_panda.py  zebra_collection_setup_plan.py
src/i19_bluesky/serial/coordinate_system/: sample_stage.py
src/i19_bluesky/serial/device_setup_plans/: diffractometer_plans.py  eiger_metadata.py  eiger_setup_plans.py  read_lookup_tables.py
src/i19_bluesky/serial/panda_plans/: panda_setup_plans.py  (+1 more)
tests/: conftest.py
tests/system_tests/: conftest.py  test_blueapi_device_system.py
tests/system_tests/blueapi_system/: config_optics_blueapi.yaml  devices.json  example_devices.py  example_devices_and_plans.py  example_plans.py  fake_access_ioc.py  plans.json
tests/unit_tests/: conftest.py  test_cli.py  test_log.py
tests/unit_tests/eh1/: conftest.py  test_find_beam_centre.py  test_optics_hutch_control.py  test_pin_tip_detection.py
tests/unit_tests/eh2/: conftest.py  test_backlight_plan.py  test_optics_hutch_control.py  test_pincol_control_plans.py  test_zebra_arming_plan.py  test_zebra_collection_setup_plan.py
tests/unit_tests/optics/: conftest.py  test_change_energy_plans.py  test_check_access.py  test_focusing_mirrors_plans.py  test_shutter_plans.py
tests/unit_tests/parameters/: test_components.py  test_constants.py  test_serial_parameters.py
tests/unit_tests/serial/: conftest.py  test_diffractometer_plans.py  test_eiger_plans.py  test_example_trigger_plan_zebra_vs_panda.py  test_move_detector_stage.py  test_move_x_and_z.py  test_panda_serial_collection.py  test_panda_setup_plans.py  test_panda_stubs.py  test_run_serial_with_panda.py  test_setup_beamline_before_collection.py  test_setup_detector.py  test_setup_panda.py  test_zebra_collection_setup_plan.py
(+21 files in other folders)
